[package]
name = "hyetos"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid"] }
dotenvy = "0.15"
serde_json = "1.0.149"
serde = "1.0.228"
chrono = "0.4.44"
oauth2  = "4"
reqwest = { version = "0.12", features = ["json"] }
dashmap = "6.1.0"
rand = "0.8.5"
